log
Thu 21 Mar 2024 08:23:49 PM UTC: 
 tests:  0|5
total_score: 0/70
8df703c
Thu 21 Mar 2024 08:34:17 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:10: error: ‘i’ undeclared (first use in this function)
   47 |     for (i = 0; i <= 10; i++){
      |          ^
exercises.c:47:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f88bfe2
Thu 21 Mar 2024 08:34:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7df23b4
Thu 21 Mar 2024 08:48:53 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e208f59
Thu 21 Mar 2024 09:04:47 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:86:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   86 |       *num = popCurrent(L);
      |            ^
exercises.c:87:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   87 |       *num = next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
f67ea57
Thu 21 Mar 2024 09:12:05 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
013797d
